--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,7 +10,7 @@ body {
     "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  margin: 0;
+  // margin: 0;
 }
 
 a {
